Kubernetes_Local/nexus/0-accout.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexus
