Kubernetes_Local/nexus/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  namespace: nexus

spec:
  selector:
    app: nexus-server
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8081
    nodePort: 31000
  - name: https
    port: 81
    targetPort: 8443
