Kubernetes_Local/nexus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
     - http:
        paths:
          - path: "/service/metrics/prometheus"
            pathType: Prefix
            backend:
              service:
                name: nexus-service
                port:
                  number: 80
